web/src/components/Sidebar/styles.module.css
.sidebar {
  --offset: calc(var(--navbar-height) + var(--actbar-height) + var(--size-2));
  display: flex;
  flex-direction: column;
  position: fixed;
  top: var(--offset);
  right: var(--size-2);
  max-height: calc(100vh - var(--offset));
  background-color: var(--primary);
  border-style: solid;
  border-width: var(--border-width);
  border-color: var(--accent-primary);
  border-radius: var(--border-radius);
  z-index: 2;
  overflow: hidden;
}

.header {
  display: flex;
  align-items: center;
  width: 100%;
  color: var(--on-secondary);
  font-weight: var(--font-heavy);
  background-color: var(--secondary);
  height: 2rem;
}

.toggle {
  display: flex;
  align-items: center;
  padding: var(--size-2);
}

.tab {
  display: flex;
  flex: 1;
  align-items: center;
  padding: var(--size-2);
}

.contents {
  display: flex;
  flex-direction: column;
  overflow: auto;
  overscroll-behavior: contain;
  padding: var(--size-1);
  width: 20rem;
}

.content {
  display: flex;
  min-height: 10rem;
  width: 100%;
}

.hidden {
  display: none;
}

